<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Phone</string>
    <string name="group">No. of group</string>
    <string name="smoking">Smoking area</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="reserve">RESERVE</string>
    <string name="smoke">Smoking</string>
</resources>
